Fix panel title overflow

--- a/assets/styles/oam-design-system/_panels.scss
+++ b/assets/styles/oam-design-system/_panels.scss
@@ -10,7 +10,6 @@
   left: 0;
   font-size: 1rem;
   line-height: 1.5;
-  &__header,
   &__headline,
   &__body,
   &__body-inner,
